<resources>
    <string name="app_name">Memento Mori</string>
    <string name="settings_title">Memento Mori widget</string>
    <string name="settings_description">The memento mori widget will display the number of full years (Y), full months (M) and full weeks (W) between the current day and the target day.</string>
    <string name="target_date">Target date</string>
    <string name="target_date_must_be_future">Target date must be in the future</string>
    <string name="font_color">Font color</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="widget_description">Memento Mori</string>
    <string name="countdown_accessibility">Full years: %1$d. Full months: %2$d. Full weeks: %3$d. Activate to refresh.</string>
    <string name="target_date_accessibility">Target date: %1$s. Activate to change.</string>
    <string name="color_accessibility">%1$s font color: %2$s. Activate to change.</string>
    <string name="widget_preview_text">10 Y\n120 M\n521 W</string>
</resources>
